javascript: - fixed conflicts in variables - added isOverflown function to scroll_handler.js - fixed an incorrect name in a listener - added arrow-related listeners
html/css:
- added arrows in the project page to help mouse users navigate the projects
- added animation for the arrows
- tweaked the hover effect on the social links of the second page
- removed the hintMove animation for mouse users

--- a/src/output.css
+++ b/src/output.css
@@ -600,6 +600,10 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .bottom-12 {
   bottom: 3rem;
 }
@@ -696,6 +700,10 @@ video {
 
 .animate-pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .select-none {
@@ -1210,6 +1218,9 @@ h4 {
   border-radius: 0.75rem;
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
   padding: 1px;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 @media (min-width: 640px) {
@@ -1222,6 +1233,10 @@ h4 {
   .social-container {
     border-radius: 9999px;
   }
+}
+
+.social-container:hover {
+  --tw-gradient-to: #1f2937 var(--tw-gradient-to-position);
 }
 
 .socials a {
@@ -1266,6 +1281,72 @@ h4 {
 .project-page > header > h3::after {
   content: "_";
   animation: blink 1s step-end infinite;
+}
+
+.left-arrow {
+  scale: -1;
+  left: -2rem;
+}
+
+@media (min-width: 1024px) {
+  .left-arrow {
+    left: -2.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .left-arrow {
+    left: -3rem;
+  }
+}
+
+.right-arrow {
+  right: -2rem;
+}
+
+@media (min-width: 1024px) {
+  .right-arrow {
+    right: -2.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .right-arrow {
+    right: -3rem;
+  }
+}
+
+.left-arrow,
+.right-arrow {
+  translate: 0 -50%;
+  animation: hintMove 1s ease-in-out infinite;
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  font-size: 3rem;
+  line-height: 1;
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+@media (min-width: 1280px) {
+  .left-arrow,
+.right-arrow {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
+.left-arrow:hover,
+.right-arrow:hover {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .project .container header {
@@ -1455,6 +1536,9 @@ h4 {
   display: flex;
   height: 100%;
   min-height: 2.5rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -1648,10 +1732,6 @@ h4 {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-.hintmove {
-  animation: hintMove 1s ease-in-out;
-}
-
 .horizontal-scroll {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -1661,6 +1741,21 @@ h4 {
 
 .horizontal-scroll:active {
   cursor: grabbing;
+}
+
+.horizontal-scroll .hintmove {
+  animation: hintMove 1s ease-in-out;
+}
+
+@media (pointer: none), (pointer: coarse) {
+  .left-arrow,
+    .right-arrow {
+    display: none;
+  }
+
+  .hintmove {
+    animation: hintMove 1s ease-in-out;
+  }
 }
 
 @media (max-height: 600px) {
