--- a/src/styles.css
+++ b/src/styles.css
@@ -89,7 +89,11 @@ h4 {
 }
 
 .social-container {
-    @apply flex items-center justify-center rounded-xl bg-gradient-to-br p-[1px] sm:p-[1.5px] lg:rounded-full;
+    @apply flex items-center justify-center rounded-xl bg-gradient-to-br p-[1px] transition-colors sm:p-[1.5px] lg:rounded-full;
+}
+
+.social-container:hover {
+    @apply to-gray-800;
 }
 
 .socials a {
@@ -99,6 +103,27 @@ h4 {
 .project-page > header > h3::after {
     content: "_";
     animation: blink 1s step-end infinite;
+}
+
+.left-arrow {
+    scale: -1;
+    @apply -left-8 lg:-left-10 xl:-left-12;
+}
+
+.right-arrow {
+    @apply -right-8 lg:-right-10 xl:-right-12;
+}
+
+.left-arrow,
+.right-arrow {
+    translate: 0 -50%;
+    animation: hintMove 1s ease-in-out infinite;
+    @apply absolute top-1/2 cursor-pointer select-none text-5xl text-gray-200 transition-all xl:text-6xl;
+}
+
+.left-arrow:hover,
+.right-arrow:hover {
+    @apply text-gray-400;
 }
 
 .project .container header {
@@ -179,7 +204,7 @@ h4 {
 }
 
 .proj-button {
-    @apply flex h-full min-h-10 flex-row items-center justify-center gap-2 rounded-lg border-[0.25px] border-gray-500 bg-gray-600 bg-opacity-25 text-xl leading-6 backdrop-blur-lg transition-colors;
+    @apply flex h-full min-h-10 select-none flex-row items-center justify-center gap-2 rounded-lg border-[0.25px] border-gray-500 bg-gray-600 bg-opacity-25 text-xl leading-6 backdrop-blur-lg transition-colors;
     @apply transition-all hover:bg-opacity-55;
     box-shadow:
         0 0 0.25px 0 rgb(107 114 128) inset,
@@ -255,10 +280,6 @@ h4 {
     @apply *:transition-colors hover:animate-pulse;
 }
 
-.hintmove {
-    animation: hintMove 1s ease-in-out;
-}
-
 .horizontal-scroll {
     user-select: none;
     cursor: grab;
@@ -266,6 +287,21 @@ h4 {
 
 .horizontal-scroll:active {
     cursor: grabbing;
+}
+
+.horizontal-scroll .hintmove {
+    animation: hintMove 1s ease-in-out;
+}
+
+@media (pointer: none), (pointer: coarse) {
+    .left-arrow,
+    .right-arrow {
+        display: none;
+    }
+
+    .hintmove {
+        animation: hintMove 1s ease-in-out;
+    }
 }
 
 @media (max-height: 600px) {
